# VendingMachine

./: .pre-commit-config.yaml  README.md  app.py  coverage.xml  db. sqlite  db.sqlite  pyproject.toml  sonar-project.properties
.github/workflows/: tests.yml
src/: app.py
src/tests/: test_app.py
src/vending_machine/: __init__.py  app.py
tests/: test_app.py
